
@startuml
package "MS Data" <<frame>> {
    struct FinnishData {
        + authorization_country: String
        + substance_name: String
        mpid: Integer
        package_id: Integer
        + medicinal_product_name: String
        MA_holder: String
        MA_number: Integer
        spc_fi: Url
        spc_sv: Url
        ~ basis_substance: String
        ~ reference_substance: String
        - formname_fi: String
        - formname_sv: String
        + formname_en: String
        spor_form_list: Integer
        spor_form: Integer
        + manufactureddoseform: String
        - route_of_admin_fi: String
        - route_of_admin_sv: String
        + route_of_admin_en: String
        route_of_admin_spor_id: Integer
        edqm_roa_id: Integer
        - strength_with_unit: String
        ingredient_quantity_operator: String
        + ingredient_base_strength: Float
        ingredient_strength_min: Float
        ingredient_strength_max: Float
        - strength_unit_fi: String
        - strength_unit_sv: String
        + strength_unit_en: String
        reference_substance_strength: String
        code: String
        free_form_package_size: String
        legal_status_for_supply: String
    }

    note right of FinnishData {
        **Fields that need explanations:**
        * mpid
        * package_id
        * MA_holder: is this the organization that producend the MedicinalProduct?
        * MA_number
        * spc_fi
        * spc_sv
        * spor_form
        * spor_form_list
        * route_of_admin_spor_id
        * edqm_roa_id
        * ingredient_quantity_operator: is it always null. What is it's purpose?
        * free_form_package_size
        * legal_status_for_supply

        **Additional questions:**
        * What is the difference between **basis_substance** and **reference_substance**?
        * What kind of code is **code**? ATC maybe?
    }

    struct BelgianData {
        + country: String
        bcfiampid: Integer
        samv2_amp_id: Integer
        + amp_name: String
        - company_id: Integer
        + company: String
        - amppname: String
        cnk_pub: Integer
        cti_ext: String
        - abbrevname: String
        - name_abbrev_fr: String
        - skp_url_f_nl: Url
        - leaflet_url_f_nl: Url
        - skp_url_f_fr: Url
        - leaflet_url_f_fr: Url
        - skp_url_f_de: Url
        - leaflet_url_f_de: Url
        + packsize: Integer
        - packdisplayvalue: String
        - marketingauthorisationholder: String
        - distributor: String
        - ampc_name: String
        - strength_substance_id: Integer
        + basis_substance: String
        + modifier: String
        - formid: Integer
        + formname: String
        - edqmform: String
        - edqmid: Integer
        - snomedid: String
        - abbrform_nl: String
        - abbrform_fr: String
        manufactureddoseform: String
        adm_doseform: String
        strength_quantity: String
        strength_unit: String
        strengthunitucum: String
        + strength_denom_quantity: Float
        + strength_denom_unit: String
        + strengthdenomunitucum: String
        - strength_quantity_2: String
        - strength_unit-2: String
        + atc: String
        + ddd: String
        + ddu: String
        - atcroute: String
        - atclabel: String
        - vtmid: String
        - vtm_name: String
        - vmpid: String
        - vmp_name: String
        - vmpgroupid: String
        - vmpgroupname: String
        - novos: String
        - noswitch: String
    }

    note left of BelgianData::amp_name {
        Medicinal product name
    }

    note left of BelgianData::formname {
        Dose form: must be translated
    }

    note right of BelgianData {
        **Fields that need explanations:** pretty much everything

        **Additional questions:**
        * What does a null **packsize** indicate?
        * What is the difference between **formname** and **edqmform**?
        * Manufacturer doseForm: why does it only contains **"?"**?
    }

    FinnishData -[hidden]-> BelgianData
}

package "Data Model" <<frame>> {
    enum DoseForm {}

    entity Country {}

    entity Substance {
        name: String
    }

    entity MedicinalProduct {
        name: String
        country: Country
        doseForme: DoseForm
        packageSize: Integer
    }

    entity Organization {
        name: String
    }

    MedicinalProduct --> DoseForm
    MedicinalProduct "*" o-- "1" Country
    MedicinalProduct "*" o-- "1" Organization
    MedicinalProduct "*" o-- "1..*" Substance
}
@enduml